# 1337-42CodingSchool

./: .gitignore  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_strchr.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_tolower.c  ft_toupper.c
00_Concepts/: Dynamic-and-Static-Library.md  File-Descriptors.md
01_Libft/: ft_isascii.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back_bonus.c  ft_lstadd_front_bonus.c  ft_lstdelone_bonus.c  ft_lstlast_bonus.c  ft_lstsize_bonus.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putstr_fd.c  ft_strchr.c  libft.h
02_Printf/: Makefile  ft_printf.c  ft_put_addr.c  ft_putnbr.c
03_Get_Next_Line/: get_next_line.c  get_next_line.h  get_next_line_bonus.c  get_next_line_bonus.h  get_next_line_utils.c  get_next_line_utils_bonus.c
04_Born2beRoot/: Checklist.md
05_Push_Swap/: Makefile  README.md  assign_indexes.c  count_lst.c  find_distance.c  free_mem.c  ft_atol.c  ft_lstadd_back.c  ft_lstnew.c  ft_number.c  ft_putstr_fd.c  ft_split.c  is_empty.c  main-helpers.c  main_helpers.c  pswp_oprs_push.c  pswp_oprs_rot.c  pswp_oprs_swp.c  pswp_sort.c  pswp_sort_3.c  pswp_sort_4.c  pswp_sort_5.c  push_swap.c  push_swap.h
07_A_Maze_ing/: README.md
08_Pipex/: Makefile  NOTES.md  README.md  (+6 more)
09_Call_Me_Maybe/: .gitignore  LINUX_CACHE_VARS.txt  Makefile  README.md  pyproject.toml
09_Call_Me_Maybe/src/: __init__.py  __main__.py  __main__.py.v1  decoder.py  models.py  system.py
(+252 files in other folders)
