[project]
name = "call-me-maybe"
version = "0.1.0"
description = "Call me maybe temp description"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flake8>=7.3.0",
    "llm-sdk",
    "mypy>=1.19.1",
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }
